--- a/public/styles/layout.css
+++ b/public/styles/layout.css
@@ -16,9 +16,26 @@ html {
 
 body {
   color: #545149;
-  background-color: #f4f1ec;
+  background-color: #cc8800;
+  background-image: url("https://www.transparenttextures.com/patterns/asfalt-dark.png");
   font-size: 24px;
+  font-family: 'Source Sans Pro', sans-serif;
+  margin-top: 100px;
 }
+
+main {
+  display: flex;
+  width: 90%;
+  justify-content: space-around;
+  align-items: center;
+  background-color: #cc8800;
+  background-image: url("https://www.transparenttextures.com/patterns/asfalt-dark.png");
+}
+
+h2.your-name {
+  margin: 10px;
+}
+
 
 /*
  * Additional CSS can be defined below or in other CSS files, as per instructions
