--- a/public/styles/nav.css
+++ b/public/styles/nav.css
@@ -1,4 +1,6 @@
 nav {
+  display: flex;
+  justify-content: space-between;
   height: 100px;
   font-family: 'Bungee', cursive;
   color: #ffffff;
@@ -12,3 +14,33 @@ nav {
 span {
   font-family: 'Bungee', cursive;
 }
+
+.btn1 {
+  border-top           : 1px solid #96d1f8;
+  background           : #6585d6;
+  background           : -webkit-gradient(linear, left top, left bottom, from(#3e539c), to(#6585d6));
+  background           : -webkit-linear-gradient(top, #3e539c, #6585d6);
+  background           : -moz-linear-gradient(top, #3e539c, #6585d6);
+  background           : -ms-linear-gradient(top, #3e539c, #6585d6);
+  background           : -o-linear-gradient(top, #3e539c, #6585d6);
+  padding              : 8px 16px;
+  -webkit-border-radius: 1px;
+  -moz-border-radius   : 1px;
+  border-radius        : 1px;
+  -webkit-box-shadow   : rgba(0, 0, 0, 1) 0 1px 0;
+  -moz-box-shadow      : rgba(0, 0, 0, 1) 0 1px 0;
+  box-shadow           : rgba(0, 0, 0, 1) 0 1px 0;
+  text-shadow          : rgba(0, 0, 0, .4) 0 1px 0;
+  color                : #ffffff;
+  font-size            : 15px;
+  font-family          : 'Bungee', cursive;
+  text-decoration      : none;
+  vertical-align       : middle;
+}
+
+.btn1:hover {
+  border-top-color: #28597a;
+  background      : #0c4685;
+  color           : #d9d5d9;
+}
+
